--- a/README.textile
+++ b/README.textile
@@ -1,1 +1,6 @@
 h1. Howto install a VirtualBox Machine CentOS with Vagrant on Mac OSX 10.6
+
+h2. Author
+
+Wagner Souza <wagnersza@gmail.com>
+https://github.com/wagnersza
