--- a/centos-5.5-x86_64/README.textile
+++ b/centos-5.5-x86_64/README.textile
@@ -1,1 +1,6 @@
 h1. Howto install a VirtualBox Machine CentOS 5.5 x86_64 with Vagrant on Mac OSX 10.6
+
+h2. Author
+
+Wagner Souza <wagnersza@gmail.com>
+https://github.com/wagnersza
